# jupiter-sentinel

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BOUNTY_SUBMISSION.md  CHAIN_SUPPORT.md  CONTRIBUTING.md  DEMO_OUTPUT.md  Dockerfile  FEEDBACK.md  FINAL_README.md  JUPITER_BOUNTY.md  Makefile  PERFORMANCE.md  PITCH_DECK.md  PRESENTATION.md  README.md  SECURITY.md  demo.py  docker-compose.yml  index.html  jupiter_sentinel_cli.py  push.sh  pyproject.toml  refactor_script.py  requirements.txt  test_refactor.py
.jupiter-sentinel/: autotrader.json  state.json  state.json.bak
.jupiter-sentinel-test2/: state.json.bak
benchmarks/: __init__.py  benchmark_oracle.py  benchmark_trading.py
docs/: API.md  ARCHITECTURE_V2.md  CHANGELOG.md  CONTRIBUTING_V2.md  CROSS_CHAIN.md  DEMO_SCRIPT.md  INDEX.md  ML_PIPELINE.md  STRATEGIES.md  TESTING.md  VIDEO_SCRIPT.md
scripts/: setup.sh
src/: __init__.py  analytics.py  api_server.py  arbitrage.py  ascii_charts.py  autotrader.py  backtest.py  config.py  correlation_tracker.py  cross_chain_arb.py  cross_chain_arbitrage.py  dashboard.py  dca.py  demo_full.py  dex_intel.py  executor.py  gridbot.py  jupiter_limits.py  live_trader.py  main.py  microstructure.py  monitoring.py  multi_timeframe.py  notifications.py  oracle.py  portfolio.py  portfolio_risk.py  predictions.py  profit_locker.py  profit_report.py  rate_limiter.py  regime_detector.py  resilience.py  risk.py  scanner.py  security.py  self_optimizer.py  sentiment.py  service_health.py  simulated_polymarket.py  (+8 more)
tests/: test_analytics.py  test_anomaly_detector.py  test_autotrader.py  test_autotrader_integration.py  test_backtest.py  test_benchmark_oracle.py  test_benchmark_trading.py  test_bridge_monitor.py  test_chain_ethereum.py  (+29 more)
(+23 files in other folders)
